Changes towards version 0.4:
- Restructuring of the unix build scripts.
  Also, interrupted dependency builds are now detected. - SvdB
- Unix build: Make it possible to use another directory than the current
  one for putting the build data in (such as build.vars, config.state,
  the obj/ dir, and the final binary). - SvdB
- Fixed various odd behaviors when loading from HyperSpace (bug #587), 
  from Nic and Michael
- Added new 'triscan' scaler; derived from scale2x[.sf.net] -Alex
- Space marines die in a self-destructing Scout (Bug #445), from Nic
- Added the -l option to produce logfiles (bug #560), from Nic
- Zoq-Fot-Pik speech properly vertically centered (bug #579), from Nic
- Input code refactoring, phase 2: All player input is brokered by 
  DoInput -Michael
- Updated .cvsignore commands, from Nic
- Fixed a keyrepeatbug from when the player cancels out of the
  Starmap in IP -Michael
- IP_taskfunc now uses PulsedInputState instead of handling its
  own debounce delays -Michael
- Input code refactoring, phase 1: Replaced messy structs with an
  array indexed by an enum. -Michael
- Thread code refactoring: only the main thread will actually spawn 
  threads, and thread IDs are properly recycled with SDL_WaitThead () 
  once they're done.  (With luck, this will fix bug #561) -Michael
- Sound code refactoring: core api is now virtualized,
  MixSDL is divided to generic mixer and driver entities - Mika
- Optimized MixSDL mixing and resampling routines
  (hopefully fixes bug #435) - Mika
- MOD music should now play properly on big endian machines if using
  high quality mode (workaround for bug #166) - Mika
- Better-looking slave shield (bug #32), from Nic
- Bay door animations don't stall before aborting (bug #500), from 
  chmmravatar
- Reports SDL version on startup (bug #520) - Mika,Nic
- Fuel usage on planet landing is now reported correctly on all situations
  (bug #556), from Nic
- Fine-grained control of menu sounds, "MenuSounds" global now 