@@ -1,4 +1,5 @@
 Changes towards version 0.4:
+- Fixed Roster-F10-Quit bug (#591), - Michael
 - Restructuring of the unix build scripts.
   Also, interrupted dependency builds are now detected. - SvdB
 - Unix build: Make it possible to use another directory than the current
